force-app/main/default/objects/geopointe__GP_List__c/geopointe__GP_List__c.object-meta.xml
<CustomObject>
    <description>Working list for a user to keep track of records they want to visit.</description>
    <label>Geopointe List</label>
    <nameField>
        <label>Geopointe List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>