force-app/main/default/objects/geopointe__GP_List__c/fields/geopointe__GP_List_Tag__c.field-meta.xml
<CustomField>
    <fullName>geopointe__GP_List_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Geopointe list tag that the list relates to.</description>
    <inlineHelpText>Geopointe list tag that the list relates to.</inlineHelpText>
    <label>Geopointe Tag</label>
    <referenceTo>geopointe__GP_Tag__c</referenceTo>
    <relationshipLabel>Geopointe List List Tag</relationshipLabel>
    <relationshipName>Geopointe_List_List_tag</relationshipName>
    <type>Lookup</type>
</CustomField>