force-app/main/default/objects/geopointe__GP_List__c/fields/geopointe__Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>