force-app/main/default/objects/geopointe__GP_List__c/fields/geopointe__Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of the list - completed or not completed.</description>
    <inlineHelpText>Status of the list - completed or not completed.</inlineHelpText>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>