force-app/main/default/objects/geopointe__GP_List__c/fields/geopointe__Marker_Color__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Marker_Color__c</fullName>
    <defaultValue>&quot;FF0000&quot;</defaultValue>
    <inlineHelpText>The HEX color that the active List markers should be in</inlineHelpText>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>